## v0.8.1:

* Moving verification on entry exists into catalog class

## v0.8.0:

* Change base to bucket prefix through out code base
* Prevent setup from overwriting existing heirlooms
* Add human readable format as default for show
* Included JSON option to show
* Hide heirloom internal attribts in show
* Added all option to display all attributes via show
* Add human readable format as default for list
* Included JSON option in list
* Add human readable format as default for catalog
* Included JSON option in catalog
* Add name filter option to catalog

## v0.7.5:

* Create random base if not specified by setup.

## v0.7.4:

* Add support to read password from file

## v0.7.3:

* Fix bug in latest_id method

## v0.7.2:

* Enclose files/dirs to tar in 's.
* Download the latest id if id not specified in download.

## v0.7.1:

* Truncate long commit messages.

## v0.7.0:

* Adding catalog which will contain all heirloom regions & bases.
* CLI will lookup base & region from catalog.
* Removing base requirement for all subcmds outside download & setup.
* Added teardown command to delete domains & buckets.
* Enclosing simpledb domains in `s
* Added catalog subcommand to list available Heirlooms from catalog.
* Reducing log levels

### v0.6.1:

* Allowing engineer to specify region for metadata
* Ensuring metadata is in an upload region
* Split setup into seperate subcommand
* Perform additional validation on CLI options

## v0.5.0:

* Verify domain exists for all cmds except build & download
* Removing requirement to check simpledb on download.
* Adding requirement for base on download.
* Fix error when .heirloom.yml does not exist.
* Refactor cli option validation
* Refactor cli specs
* Add -x to download to extract heirloom to given output path
* Verify -o specified in download is a directory
* Requiring -d for builds (will no longer default to .)
* Remove new lines from values of git comments
* Verify directory given at build is a directory